--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,5 +42,38 @@ packages = ["sshman"]
 [dependency-groups]
 dev = [
     "build>=1.4.0",
+    "pytest>=9.0.2",
+    "ruff>=0.15.2",
     "twine>=6.2.0",
 ]
+
+[tool.ruff]
+target-version = "py312"
+line-length = 88
+
+[tool.ruff.lint]
+select = [
+    "E",      # pycodestyle errors
+    "W",      # pycodestyle warnings
+    "F",      # Pyflakes
+    "I",      # isort
+    "B",      # flake8-bugbear
+    "C4",     # flake8-comprehensions
+    "UP",     # pyupgrade
+    "ARG",    # flake8-unused-arguments
+    "SIM",    # flake8-simplify
+]
+ignore = [
+    "E501",   # line too long (handled by formatter)
+    "W293",   # blank line contains whitespace (in CSS strings)
+]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["ARG"]  # Allow unused arguments in tests (fixtures)
+
+[tool.ruff.lint.isort]
+known-first-party = ["sshman"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["."]
