add pypi publishing infrastructure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "sshmanager"
-version = "0.1.0"
+dynamic = ["version"]
 description = "A simple interactive TUI SSH connection manager"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -33,8 +33,17 @@ Issues = "https://github.com/dejan/sshman/issues"
 sshman = "sshman.app:run"
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
+
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.version.raw-options]
+version_scheme = "pep440"
+
+[tool.hatch.build.hooks.vcs]
+version-file = "sshman/_version.py"
 
 [tool.hatch.build.targets.wheel]
 packages = ["sshman"]
